--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wuzapi-manager",
   "private": true,
-  "version": "0.0.4",
+  "version": "0.0.7",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -91,6 +91,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.56.2",
     "@types/luxon": "^3.4.2",
     "@types/react-datepicker": "^7.0.0",
